Merge 1170 into db4o: SVN r23350 to 23968. Significant manual resolution was needed in the client layer, InsertCompressor now implements CompressJob etc.
git-svn-id: file:///home/toad/git-migration/temprepository/branches/db4o/freenet@23973 67a373e5-eb02-0410-a15c-ee090a768436